update website intro

--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
     <title>laucarrillo.com</title>
 </head>
 <body>
+<div class="index-container">
     <h1> Lau Carrillo </h1>
-    <a href="./spanish-homepage.html"> Español </a>  
-    <a href="#"> English </a>  
+
+    <div class="d-flex justify-content-center">
+        <div class="index-button">
+            <a href="./spanish-homepage.html">
+                Español
+            </a>  
+        </div>
+        <div class="index-button">
+            <a href="#"> English </a>  
+        </div>
+    </div>
+</div>
 </body>
 </html>
