--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Import Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css">
     <title>laucarrillo.com</title>
@@ -17,24 +21,24 @@
         <nav class="d-flex justify-content-between">
         <!-- Logo -->
         <a href="/">
-        <img src="src/Logo.png" alt="logo" class="log d-none d-md-block"/>
+        <img src="src/big-logo.png" alt="logo" class="log d-none d-md-block"/>
         </a>
-        <a href="/">
+        <!-- <a href="/">
         <img src="src/Logo.png" alt="logo" class="logo d-block d-md-none"/>
-        </a>
+        </a> -->
         <!-- Right Menu -->
         <ul>
             <li>
-            <a href="#" class="active">  Home </a>
+            <a href="./spanish-homepage.html" class="active">  Inicio </a>
             </li>
             <li>
             <a href="#"> Blog </a>
             </li>
             <li> 
-            <a href="#">  Contact </a> 
+            <a href="#">  Contacto </a> 
             </li>
             <li> 
-            <a href="#">  Resources </a>
+            <a href="#" class="resources">  Recursos </a>
             </li>
         </ul>
         </div>
@@ -45,13 +49,13 @@
         <main>
             <h1> Laura Carrillo </h1>
             <h2> "Vivir la vida impactando positivamente" </h2>
-            <a href="#"> Ver más </a>
+            <a href="#info-me"> Ver más </a>
         </main>
 
     <div class="about">
-        <section class="grid grid-2-columns" id="info-merida">
+        <section class="grid grid-2-columns" id="info-me">
         <div>
-            <img src="#"
+            <img src="./src/me.png"
             class="img-responsive" />
         </div>
         <div>
