update about section

--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -56,16 +56,18 @@
         <section class="grid grid-2-columns" id="info-me">
         <div>
             <img src="./src/me.png"
-            class="img-responsive" />
+            class="img-responsive"/>
         </div>
         <div>
-            <h2> Why Mérida? </h2>
-            <h3> Mérida, "the White City" </h3>
+            <h3> ¡Hola! Soy Laura Carrillo </h3>
             <p> 
-                Mérida is distinguished for being a city full of peace, calm and for its kind and hospitable people.
-            </p>
-            <p>
-                It is the ideal place for those who want to spend a vacation in a relaxed atmosphere and with a warm climate. Mérida was founded on January 6, 1542, and built on the Mayan city of <em> Toh </em>, which can be seen in the surroundings of its Plaza Grande, since its history, influence and culture were reflected in its architecture. Walking through its streets in an atmosphere of history and fun is what our beautiful Mérida offers you.
+                Creé este sitio web con el propósito de compartir mis ideas y pensamientos con el mundo.
+                <br /> 
+                <br /> 
+                Me encanta leer y aprender constantemente, salir y experimentar la naturaleza, viajar, aprender idiomas, también disfruto mucho haciendo actividades que contribuyan con el medio ambiente y hacer de este mundo un poco mejor para todos.
+                <br /> 
+                <br /> 
+                Mi moto es vivir y disfrutar mi vida de una manera en la que pueda impactar positivamente a otros.
             </p>
             </div>
         </section>
