started get to know me section

--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -13,6 +13,10 @@
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css">
     <title>laucarrillo.com</title>
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/78e0a4fa46.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Navigation Menu -->
@@ -23,9 +27,6 @@
         <a href="/">
         <img src="src/big-logo.png" alt="logo" class="log d-none d-md-block"/>
         </a>
-        <!-- <a href="/">
-        <img src="src/Logo.png" alt="logo" class="logo d-block d-md-none"/>
-        </a> -->
         <!-- Right Menu -->
         <ul>
             <li>
@@ -44,14 +45,14 @@
         </div>
         </nav>
     </header>
-
+        <!-- Header -->
     <div class="container">
         <main>
             <h1> Laura Carrillo </h1>
             <h2> "Vivir la vida impactando positivamente" </h2>
             <a href="#info-me"> Ver más </a>
         </main>
-
+        <!-- About Section -->
     <div class="about">
         <section class="grid grid-2-columns" id="info-me">
         <div>
@@ -71,6 +72,23 @@
             </p>
             </div>
         </section>
+        <!-- Get to know me section -->
+        <div class="get-to-know">
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://www.instagram.com/lau_carrillo" target="_blank">
+                <i class="fab fa-instagram"></i>
+                Instagram
+                </a>
+                <a href="https://www.youtube.com/channel/UCFnpuvCQvIiC8aDx4any3Tw" target="_blank">
+                <i class="fab fa-youtube"></i>
+                Youtube
+                </a>
+                <a href="https://www.linkedin.com/in/laura-carrillo-975a53139" target="_blank">
+                <i class="fab fa-linkedin"></i>
+                Linkedin
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
