--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css">
     <title>laucarrillo.com</title>
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/78e0a4fa46.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="index-container">
