--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -74,20 +74,30 @@
         </section>
         <!-- Get to know me section -->
         <div class="get-to-know">
+            <h2> Get to know me </h2>
             <div class="social-links d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank">
                 <i class="fab fa-instagram"></i>
-                Instagram
                 </a>
                 <a href="https://www.youtube.com/channel/UCFnpuvCQvIiC8aDx4any3Tw" target="_blank">
                 <i class="fab fa-youtube"></i>
-                Youtube
                 </a>
                 <a href="https://www.linkedin.com/in/laura-carrillo-975a53139" target="_blank">
                 <i class="fab fa-linkedin"></i>
-                Linkedin
                 </a>
             </div>
+
+            <!-- <div class="d-flex justify-content-center">
+                <a href="https://www.instagram.com/lau_carrillo" target="_blank" class="social">
+                Instagram
+                </a>
+                <a href="https://www.youtube.com/channel/UCFnpuvCQvIiC8aDx4any3Tw" target="_blank" class="social">
+                Youtube
+                </a>
+                <a href="https://www.linkedin.com/in/laura-carrillo-975a53139" target="_blank" class="social">
+                Linkedin
+                </a>
+            </div> -->
         </div>
     </div>
 </body>
