--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -73,7 +73,7 @@
             </div>
         </section>
         <!-- Get to know me section -->
-        <div class="get-to-know">
+    <div class="get-to-know">
             <h2> Get to know me </h2>
             <div class="social-links d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank">
@@ -86,8 +86,8 @@
                 <i class="fab fa-linkedin"></i>
                 </a>
             </div>
-
-            <!-- <div class="d-flex justify-content-center">
+        <!-- Names -->
+            <div class="d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank" class="social">
                 Instagram
                 </a>
@@ -97,8 +97,59 @@
                 <a href="https://www.linkedin.com/in/laura-carrillo-975a53139" target="_blank" class="social">
                 Linkedin
                 </a>
-            </div> -->
+            </div>
+        <!-- Description -->
+            <div class="d-flex justify-content-center">
+                <div class="description">
+                    <p>
+                        Conoce un poco más  <br />
+                        sobre mi día a día
+                    </p>
+                </div>
+                <div class="description">
+                    <p>
+                        Contenido sobre
+                        <br/>
+                        desarrollo personal y
+                        <br />
+                        crecimiento profesional
+                    </p>
+                </div>
+                <div class="description">
+                    <p>
+                        My perfil profesional <br />
+                        para hacer conexión
+                    </p>
+                </div>
+            </div>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <section class="grid grid-3-columns-first-narrow">
+        <div>
+            <h3>
+                About
+            </h3>
+            <p>
+                This project was coded by Laura Carrillo and is open-sourced on Github
+            </p>
         </div>
+        <div>
+            <h3> Resources </h3>
+            <ul>
+                <li> Blog </li>
+                <li> Resources </li>
+            </ul>
+        </div>
+        <div>
+            <h3> Contact </h3>
+            <p>
+                laucarrillo21@gmail.com
+            </p>
+        </div>
+        </section>
+    </footer>
+
     </div>
 </body>
 </html>
