--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -33,7 +33,7 @@
             <a href="./spanish-homepage.html" class="active">  Inicio </a>
             </li>
             <li>
-            <a href="#"> Blog </a>
+            <a href="./spanish-homepage.html"> Blog </a>
             </li>
             <li> 
             <a href="#">  Contacto </a> 
@@ -125,26 +125,33 @@
     </div>
     <!-- Footer -->
     <footer>
-        <section class="grid grid-3-columns-first-narrow">
+        <section class="grid-3-columns">
         <div>
             <h3>
                 About
             </h3>
             <p>
-                This project was coded by Laura Carrillo and is open-sourced on Github
+                Este proyecto fue realizado por
+                <a href="https://www.linkedin.com/in/laura-carrillo21/" target="_blank" class="footer-link"> Laura Carrillo </a>
+                y es <a href="https://github.com/LauCarrillo21" target="_blank" class="footer-link"> código abierto </a>
+                en Github
             </p>
-        </div>
+        </div>        
         <div>
-            <h3> Resources </h3>
+            <h3> Recursos </h3>
             <ul>
                 <li> Blog </li>
-                <li> Resources </li>
+                <li>
+                    <a href="" target="_blank" class="footer-link">Recursos</a>
+                </li>
             </ul>
         </div>
         <div>
-            <h3> Contact </h3>
+            <h3> Contacto </h3>
             <p>
+                <a href="mailto:laucarrillo21@gmail.com" target="_blank" class="footer-link">
                 laucarrillo21@gmail.com
+                </a>
             </p>
         </div>
         </section>
