--- a/spanish-blog.html
+++ b/spanish-blog.html
@@ -45,3 +45,18 @@
         </div>
         </nav>
     </header>
+    <!-- Main Section -->
+    <section class="blog-main">
+        <div class="container">
+            <h3> ¡Hola! Soy Laura Carrillo </h3>
+            <p> 
+                Creé este sitio web con el propósito de compartir mis ideas y pensamientos con el mundo.
+                <br /> 
+                <br /> 
+                Me encanta leer y aprender constantemente, salir y experimentar la naturaleza, viajar, aprender idiomas, también disfruto mucho haciendo actividades que contribuyan con el medio ambiente y hacer de este mundo un poco mejor para todos.
+                <br /> 
+                <br /> 
+                Mi moto es vivir y disfrutar mi vida de una manera en la que pueda impactar positivamente a otros.
+            </p>
+        </div>
+    </section>
