update blog cards

--- a/spanish-blog.html
+++ b/spanish-blog.html
@@ -46,17 +46,65 @@
         </nav>
     </header>
     <!-- Main Section -->
-    <section class="blog-main">
-        <div class="container">
-            <h3> ¡Hola! Soy Laura Carrillo </h3>
-            <p> 
-                Creé este sitio web con el propósito de compartir mis ideas y pensamientos con el mundo.
-                <br /> 
-                <br /> 
-                Me encanta leer y aprender constantemente, salir y experimentar la naturaleza, viajar, aprender idiomas, también disfruto mucho haciendo actividades que contribuyan con el medio ambiente y hacer de este mundo un poco mejor para todos.
-                <br /> 
-                <br /> 
-                Mi moto es vivir y disfrutar mi vida de una manera en la que pueda impactar positivamente a otros.
-            </p>
-        </div>
-    </section>
+    <div class="container">
+        <section class="blog-main">
+            <div class="three-columns-blog">
+                <div class="blog-card">
+                    <div> AREA </div>
+                    <div>
+                        <img src="./src/test.png" alt="test-1" width="200">
+                    </div>
+                    <div> Title </div>
+                </div>
+
+                <div class="blog-card">
+                    <div> AREA </div>
+                    <div>
+                        Image
+                    </div>
+                    <div> Title </div>
+                </div>
+
+                <div class="blog-card">
+                    <div> AREA </div>
+                    <div>
+                        Image
+                    </div>
+                    <div> Title </div>
+                </div>
+            </div>
+        </section>
+    <!-- Footer -->
+    <footer>
+        <section class="grid-3-columns">
+            <div>
+                <h3> About</h3>
+                <p>
+                Este proyecto fue realizado por
+                <a href="https://www.linkedin.com/in/laura-carrillo21/" target="_blank" class="footer-link"> Laura Carrillo </a>
+                y es <a href="https://github.com/LauCarrillo21" target="_blank" class="footer-link"> código abierto </a>
+                en Github
+                </p>
+            </div>        
+            <div>
+                <h3> Recursos </h3>
+                <ul>
+                    <li>
+                        <a href="./spanish-blog.html" target="_blank" class="footer-link"> Blog </a> 
+                    <li>
+                        <a href="" target="_blank" class="footer-link">Recursos</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3> Contacto </h3>
+                <p>
+                    <a href="mailto:laucarrillo21@gmail.com" target="_blank" class="footer-link">
+                    laucarrillo21@gmail.com
+                    </a>
+                </p>
+            </div>
+        </section>
+    </footer>
+    </div>
+
