--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -33,7 +33,7 @@
             <a href="./spanish-homepage.html" class="active">  Inicio </a>
             </li>
             <li>
-            <a href="./spanish-homepage.html"> Blog </a>
+            <a href="./spanish-blog.html"> Blog </a>
             </li>
             <li> 
             <a href="#">  Contacto </a> 
@@ -140,7 +140,8 @@
         <div>
             <h3> Recursos </h3>
             <ul>
-                <li> Blog </li>
+                <li>
+                    <a href="./spanish-blog.html" target="_blank" class="footer-link"> Blog </a> 
                 <li>
                     <a href="" target="_blank" class="footer-link">Recursos</a>
                 </li>
