update blog section

--- a/spanish-blog.html
+++ b/spanish-blog.html
@@ -48,29 +48,75 @@
     <!-- Main Section -->
     <div class="container">
         <section class="blog-main">
-            <div class="three-columns-blog">
+            <!-- Column -->
+            <div class="four-columns-blog">
+                <!-- Card  -->
                 <div class="blog-card">
-                    <div> AREA </div>
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" width="200">
+                        <img src="./src/test.png" alt="test-1" class="test">
                     </div>
-                    <div> Title </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
                 </div>
-
+                <!-- Card  -->
                 <div class="blog-card">
-                    <div> AREA </div>
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
                     <div>
-                        Image
+                        <img src="./src/test.png" alt="test-1" class="test">
                     </div>
-                    <div> Title </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
                 </div>
-
+                <!-- Card  -->
                 <div class="blog-card">
-                    <div> AREA </div>
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
                     <div>
-                        Image
+                        <img src="./src/test.png" alt="test-1" class="test">
                     </div>
-                    <div> Title </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
+                </div>
+                <!-- Card  -->
+                <div class="blog-card">
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
+                </div>
+            </div>
+
+            <!-- Column -->
+            <div class="four-columns-blog">
+                <!-- Card  -->
+                <div class="blog-card">
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
+                </div>
+                <!-- Card  -->
+                <div class="blog-card">
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
+                </div>
+                <!-- Card  -->
+                <div class="blog-card">
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
+                </div>
+                <!-- Card  -->
+                <div class="blog-card">
+                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="card-description"> La regla de los 5 segundos </div>
                 </div>
             </div>
         </section>
