contact page update

--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -36,7 +36,7 @@
             <a href="./spanish-blog.html"> Blog </a>
             </li>
             <li> 
-            <a href="#">  Contacto </a> 
+            <a href="./spanish-contact.html">  Contacto </a> 
             </li>
             <li> 
             <a href="#" class="resources">  Recursos </a>
