--- a/spanish-blog.html
+++ b/spanish-blog.html
@@ -36,7 +36,7 @@
             <a href="./spanish-blog.html" class="active"> Blog </a>
             </li>
             <li> 
-            <a href="#">  Contacto </a> 
+            <a href="./spanish-contact.html">  Contacto </a> 
             </li>
             <li> 
             <a href="#" class="resources">  Recursos </a>
@@ -153,4 +153,6 @@
         </section>
     </footer>
     </div>
+</body>
+</html>
 
