--- a/spanish-resources.html
+++ b/spanish-resources.html
@@ -36,10 +36,10 @@
             <a href="./spanish-blog.html" > Blog </a>
             </li>
             <li> 
-            <a href="./spanish-contact.html" class="active">  Contacto </a> 
+            <a href="./spanish-contact.html">  Contacto </a> 
             </li>
             <li> 
-            <a href="./spanish-resources.html" class="resources">  Recursos </a>
+            <a href="./spanish-resources.html" class="resources active">  Recursos </a>
             </li>
         </ul>
         </div>
