--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -39,7 +39,7 @@
             <a href="./spanish-contact.html">  Contacto </a> 
             </li>
             <li> 
-            <a href="#" class="resources">  Recursos </a>
+            <a href="./spanish-resources.html" class="resources">  Recursos </a>
             </li>
         </ul>
         </div>
