--- a/spanish-resources.html
+++ b/spanish-resources.html
@@ -47,26 +47,8 @@
     </header>
     <!-- Main Section -->
     <div class="container">
-        <h1 class="mb-5"> Contáctame </h1>
-        <h3> Envía un correo electrónico </h3>
-            <p>
-                <a href="mailto:laucarrillo21@gmail.com" class="contact-link" target="_blanks">
-                    laucarrillo21@gmail.com
-                </a>
-            </p>
-        <h3> Conecta conmigo en Linkedin</h3>
-            <p>
-                <a href="https://www.linkedin.com/in/laura-carrillo-975a53139" target="_blank" class="contact-link">
-                    Laura Carrillo
-                </a>
-            </p>
-        <h3> Sígueme en Instagram</h3>
-        <p>
-                <a href="https://www.instagram.com/lau_carrillo" target="_blank" class="contact-link">
-                    @lau_carrillo
-                </a>
-        </p>
-
+        <h1 class="mb-5"> Recursos </h1>
+        
     <!-- Footer -->
     <footer>
         <section class="grid-3-columns">
