--- a/spanish-resources.html
+++ b/spanish-resources.html
@@ -67,7 +67,7 @@
                     <li>
                         <a href="./spanish-blog.html" target="_blank" class="footer-link"> Blog </a> 
                     <li>
-                        <a href="" target="_blank" class="footer-link">Recursos</a>
+                        <a href="./spanish-resources.html" target="_blank" class="footer-link">Recursos</a>
                     </li>
                 </ul>
             </div>
