update resources page

--- a/spanish-resources.html
+++ b/spanish-resources.html
@@ -47,7 +47,150 @@
     </header>
     <!-- Main Section -->
     <div class="container">
-        <h1 class="mb-5"> Recursos </h1>
+        <section class="resources-main">
+            <!-- Column -->
+            <div class="three-columns-resource">
+                <!-- Resource  -->
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div>
+
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div>
+
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Column -->
+            <div class="three-columns-resource">
+                <!-- Resource  -->
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div>
+
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div>
+
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div> 
+            </div>
+        </section>
+
+
         
     <!-- Footer -->
     <footer>
