--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -74,7 +74,7 @@
         </section>
         <!-- Get to know me section -->
     <div class="get-to-know">
-            <h2> Get to know me </h2>
+            <h2> Conoce más de mí </h2>
             <div class="social-links d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank">
                 <i class="fab fa-instagram"></i>
@@ -86,38 +86,38 @@
                 <i class="fab fa-linkedin"></i>
                 </a>
             </div>
-        <!-- Names -->
+                <!-- Names -->
             <div class="d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank" class="social">
-                Instagram
+                    Instagram
                 </a>
                 <a href="https://www.youtube.com/channel/UCFnpuvCQvIiC8aDx4any3Tw" target="_blank" class="social">
-                Youtube
+                    Youtube
                 </a>
                 <a href="https://www.linkedin.com/in/laura-carrillo-975a53139" target="_blank" class="social">
-                Linkedin
+                    Linkedin
                 </a>
             </div>
         <!-- Description -->
             <div class="d-flex justify-content-center">
                 <div class="description">
                     <p>
-                        Conoce un poco más  <br />
-                        sobre mi día a día
+                        Conoce un poco
+                        más <br/>
+                        sobre
+                        mi día a día
                     </p>
                 </div>
                 <div class="description">
                     <p>
-                        Contenido sobre
-                        <br/>
-                        desarrollo personal y
+                        Desarrollo personal y
                         <br />
                         crecimiento profesional
                     </p>
                 </div>
                 <div class="description">
                     <p>
-                        My perfil profesional <br />
+                        Mi perfil profesional <br />
                         para hacer conexión
                     </p>
                 </div>
