update nav bar responsive

--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -101,34 +101,33 @@
         <!-- Description -->
             <div class="d-flex justify-content-center">
                 <div class="description">
-                    <p>
-                        Conoce un poco
-                        más <br/>
-                        sobre
+                    <p class="description">
+                        Conoce más sobre <br/>
                         mi día a día
                     </p>
                 </div>
+                
                 <div class="description">
                     <p>
-                        Desarrollo personal y
+                        Desarrollo personal
                         <br />
-                        crecimiento profesional
+                        y profesional
                     </p>
                 </div>
                 <div class="description">
                     <p>
                         Mi perfil profesional <br />
-                        para hacer conexión
+                        para conectar
                     </p>
                 </div>
-            </div>
+            </div>  
     </div>
     <!-- Footer -->
     <footer>
         <section class="grid-3-columns">
         <div>
             <h3>
-                About
+                Acerca de
             </h3>
             <p>
                 Este proyecto fue realizado por
