--- a/spanish-resources.html
+++ b/spanish-resources.html
@@ -196,7 +196,7 @@
     <footer>
         <section class="grid-3-columns">
             <div>
-                <h3> About</h3>
+                <h3> Acerca de </h3>
                 <p>
                 Este proyecto fue realizado por
                 <a href="https://www.linkedin.com/in/laura-carrillo21/" target="_blank" class="footer-link"> Laura Carrillo </a>
