update responsive version 1

--- a/spanish-homepage.html
+++ b/spanish-homepage.html
@@ -73,7 +73,7 @@
             </div>
         </section>
         <!-- Get to know me section -->
-    <div class="get-to-know">
+        <div class="get-to-know">
             <h2> Conoce más de mí </h2>
             <div class="social-links d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank">
@@ -87,7 +87,7 @@
                 </a>
             </div>
                 <!-- Names -->
-            <div class="d-flex justify-content-center">
+            <div class="social-names d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank" class="social">
                     Instagram
                 </a>
@@ -99,7 +99,7 @@
                 </a>
             </div>
         <!-- Description -->
-            <div class="d-flex justify-content-center">
+            <div class="social-description d-flex justify-content-center">
                 <div class="description">
                     <p class="description">
                         Conoce más sobre <br/>
@@ -121,7 +121,7 @@
                     </p>
                 </div>
             </div>  
-    </div>
+        </div>
     <!-- Footer -->
     <footer>
         <section class="grid-3-columns">
