update resources page

--- a/spanish-resources.html
+++ b/spanish-resources.html
@@ -72,7 +72,7 @@
                         </button>
                     </div>
                 </div>
-
+                <!-- Resource 1 -->
                 <div class="resource-card">
                     <div>
                         <img src="./src/test.png" alt="test-1" class="test">
@@ -94,7 +94,29 @@
                         </button>
                     </div>
                 </div>
-
+                <!-- Resource 2 -->
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div> 
+                <!-- Resource 3 -->
                 <div class="resource-card">
                     <div>
                         <img src="./src/test.png" alt="test-1" class="test">
@@ -116,9 +138,7 @@
                         </button>
                     </div>
                 </div>
-
             </div>
-
             <!-- Column -->
             <div class="three-columns-resource">
                 <!-- Resource  -->
@@ -143,7 +163,7 @@
                         </button>
                     </div>
                 </div>
-
+                <!-- Resource 1 -->
                 <div class="resource-card">
                     <div>
                         <img src="./src/test.png" alt="test-1" class="test">
@@ -165,7 +185,7 @@
                         </button>
                     </div>
                 </div>
-
+                <!-- Resource 2 -->
                 <div class="resource-card">
                     <div>
                         <img src="./src/test.png" alt="test-1" class="test">
@@ -187,6 +207,28 @@
                         </button>
                     </div>
                 </div> 
+                <!-- Resource 3 -->
+                <div class="resource-card">
+                    <div>
+                        <img src="./src/test.png" alt="test-1" class="test">
+                    </div>
+                    <div class="resource-title">
+                        Diseña la vida de tus
+                        <br/>
+                        sueños 
+                    </div>
+                    <div class="resource-description"> 
+                    <ul>
+                        <li> Video </li>
+                        <li> Cuaderno de ejercicios </li>
+                    </ul>
+                    </div>
+                    <div class="resource-button">
+                        <button class="rsc-button">
+                            Descargar
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
 
