update english home

--- a/english-home.html
+++ b/english-home.html
@@ -30,16 +30,16 @@
         <!-- Right Menu -->
         <ul>
             <li>
-            <a href="./spanish-homepage.html" class="active">  Inicio </a>
+            <a href="./spanish-homepage.html" class="active">  Home </a>
             </li>
             <li>
             <a href="./spanish-blog.html"> Blog </a>
             </li>
             <li> 
-            <a href="./spanish-contact.html">  Contacto </a> 
+            <a href="./spanish-contact.html">  Contact </a> 
             </li>
             <li> 
-            <a href="./spanish-resources.html" class="resources">  Recursos </a>
+            <a href="./spanish-resources.html" class="resources">  Resources </a>
             </li>
         </ul>
         </div>
@@ -49,8 +49,8 @@
     <div class="container">
         <main>
             <h1> Laura Carrillo </h1>
-            <h2> "Vivir la vida impactando positivamente" </h2>
-            <a href="#info-me"> Ver más </a>
+            <h2> "Live life positively impacting" </h2>
+            <a href="#info-me"> Learn More </a>
         </main>
         <!-- About Section -->
     <div class="about">
@@ -60,21 +60,21 @@
             class="img-responsive"/>
         </div>
         <div>
-            <h3> ¡Hola! Soy Laura Carrillo </h3>
+            <h3> Hi! I'm Laura Carrillo </h3>
             <p> 
-                Creé este sitio web con el propósito de compartir mis ideas y pensamientos con el mundo.
+                I created this website to share my ideas and thoughts with the world.
                 <br /> 
                 <br /> 
-                Me encanta leer y aprender constantemente, salir y experimentar la naturaleza, viajar, aprender idiomas, también disfruto mucho haciendo actividades que contribuyan con el medio ambiente y hacer de este mundo un poco mejor para todos.
+                I love reading, learning constantly, going out and experiencing nature, traveling, learning languages, I also enjoy doing activities to contribute with the environment and to try to make this world a little bit better.
                 <br /> 
                 <br /> 
-                Mi moto es vivir y disfrutar mi vida de una manera en la que pueda impactar positivamente a otros.
+                My moto in life is to live and enjoy my life in a way that I can positively impact others.
             </p>
             </div>
         </section>
         <!-- Get to know me section -->
         <div class="get-to-know">
-            <h2> Conoce más de mí </h2>
+            <h2> Get to know me </h2>
             <div class="social-links d-flex justify-content-center">
                 <a href="https://www.instagram.com/lau_carrillo" target="_blank">
                 <i class="fab fa-instagram"></i>
@@ -102,22 +102,27 @@
             <div class="social-description d-flex justify-content-center">
                 <div class="description">
                     <p class="description">
-                        Conoce más sobre <br/>
-                        mi día a día
+                        Learn more about <br/>
+                        my day to day
                     </p>
                 </div>
                 
                 <div class="description">
                     <p>
-                        Desarrollo personal
+                        Personal and
                         <br />
-                        y profesional
+                        professional
+                        <br />
+                        development
                     </p>
                 </div>
                 <div class="description">
                     <p>
-                        Mi perfil profesional <br />
-                        para conectar
+                        My professional
+                        <br />
+                        profile
+                        <br />
+                        to connect
                     </p>
                 </div>
             </div>  
@@ -127,27 +132,27 @@
         <section class="grid-3-columns">
         <div>
             <h3>
-                Acerca de
+                About
             </h3>
             <p>
-                Este proyecto fue realizado por
+                This project was created by
                 <a href="https://www.linkedin.com/in/laura-carrillo21/" target="_blank" class="footer-link"> Laura Carrillo </a>
-                y es <a href="https://github.com/LauCarrillo21" target="_blank" class="footer-link"> código abierto </a>
-                en Github
+                and is <a href="https://github.com/LauCarrillo21" target="_blank" class="footer-link"> open-sourced </a>
+                in Github
             </p>
         </div>        
         <div>
-            <h3> Recursos </h3>
+            <h3> Resources </h3>
             <ul>
                 <li>
                     <a href="./spanish-blog.html" target="_blank" class="footer-link"> Blog </a> 
                 <li>
-                    <a href="./spanish-resources.html" target="_blank" class="footer-link">Recursos</a>
+                    <a href="./spanish-resources.html" target="_blank" class="footer-link">Resources</a>
                 </li>
             </ul>
         </div>
         <div>
-            <h3> Contacto </h3>
+            <h3> Contact </h3>
             <p>
                 <a href="mailto:laucarrillo21@gmail.com" target="_blank" class="footer-link">
                 laucarrillo21@gmail.com
