--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css">
-    <title>laucarrillo.com</title>
+    <title> 👩🏻 laucarrillo.com</title>
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/78e0a4fa46.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
@@ -29,7 +29,7 @@
             </a>  
         </div>
         <div class="index-button">
-            <a href="#"> English </a>  
+            <a href="english-home.html"> English </a>  
         </div>
     </div>
 </div>
