update english blog

--- a/english-home.html
+++ b/english-home.html
@@ -30,10 +30,10 @@
         <!-- Right Menu -->
         <ul>
             <li>
-            <a href="./spanish-homepage.html" class="active">  Home </a>
+            <a href="./english-home.html" class="active">  Home </a>
             </li>
             <li>
-            <a href="./spanish-blog.html"> Blog </a>
+            <a href="./english-blog.html"> Blog </a>
             </li>
             <li> 
             <a href="./spanish-contact.html">  Contact </a> 
